--- a/contact.html
+++ b/contact.html
@@ -7,17 +7,12 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <header>
-      <div class="container-logo">
-        <img src="images/logo.jpg" alt="logo" class="logo" />
-        <div class="container-title">
-          <div class="first-heading">Ballari Business College</div>
-          <div class="second-heading">
-            Affliated to Vijayanagara Krishnadevaraya Universtiy
-          </div>
-        </div>
+    <div class="container-logo">
+      <img src="images/bbc.png" alt="logo" class="logo" />
+     
+      
       </div>
-    </header>
+    </div>
 
      <!-- NAVIGATION -->
 
@@ -33,7 +28,7 @@
 
     <div class="container-contact">
       <div class="one-container">
-        <img src="images/logo.jpg" alt="logo" srcset="" class="logo" />
+        <img src="images/logo.jpg" alt="logo" srcset="" class="contact-logo" />
         <div class="clg-name">
           <img src="images/building.svg" alt="clgName" />
           Ballari Business College
