--- a/register.html
+++ b/register.html
@@ -7,17 +7,12 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <header>
-        <div class="container-logo">
-          <img src="images/logo.jpg" alt="logo" class="logo" />
-          <div class="container-title">
-            <div class="first-heading">Ballari Business College</div>
-            <div class="second-heading">
-              Affliated to Vijayanagara Krishnadevaraya Universtiy
-            </div>
-          </div>
-        </div>
-      </header>
+  <div class="container-logo">
+    <img src="images/bbc.png" alt="logo" class="logo" />
+   
+    
+    </div>
+  </div>
 
        <!-- NAVIGATION -->
 
@@ -210,7 +205,7 @@
             folkRhythm6: document.getElementById("gala6").value,
   
           });
-            alert("Login Sucessfull  !");
+            alert("Hurray ! you have registered ...");
          })
     </script>
 </body>
